# Chat

./: .gitignore  README.md  client.py  config.py  manage.py  pyproject.toml  requirements.txt  server.py  tests.py  utils.py
app/: __init__.py  client_utils.py  config.py  models.py  server_utils.py  utils.py
app/gui/: ser.py  server.py
client/: client_utils.py  core.py  models.py
client/gui/: client.py  ui_client.py  welcome.py
client_app/: core.py
config/: settigs.py  utils.py
devChat_client/client/client_app/gui/: welcome.py
docs/source/: conf.py
log/: __init__.py  client_log_config.py  server_log_config.py
server/: core.py  models.py  server_utils.py
server/gui/: server.py
source/: index.rst  modules.rst
tests/: test_client.py  test_server.py  test_utils.py
