[tool.poetry]
name = "chat"
version = "0.1.0"
description = "messenger"
authors = ["kpomak <romka_ne@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
